--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1461,7 +1461,7 @@ hr{margin-top:20px;margin-bottom:20px;border:0;border-top:1px solid #eee}
 .btn-outline:active,.btn-outline:focus,.btn-outline:hover{color:#fff;background-color:#1d365d;border-color:#1d365d}
 .btn-outline-inverse{color:#fff;background-color:transparent;border-color:#b9c8e0}
 .btn-outline-inverse:active,.btn-outline-inverse:focus,.btn-outline-inverse:hover{color:#1d365d;text-shadow:none;background-color:#fff;border-color:#fff}
-.anchor,.anchor:empty{position:absolute;top:auto;bottom:0;left:0;color:transparent;font-size:18px;padding:10px 10px 10px 25px;width:60px}
+.anchor,.anchor:empty{position:absolute;top:auto;color:transparent;font-size:18px;padding:10px 10px 10px 25px;width:60px}
 h2 .anchor{margin-bottom:-3px}
 h3 .anchor{margin-bottom:-7px}
 h4 .anchor{margin-bottom:-11px}
@@ -1718,18 +1718,19 @@ to{transform:translateY(0) scale(1);opacity:1}
 .posts-content,.posts-list-item{position:relative}
 .zoomify-shadow.zoomed{opacity:1;cursor:pointer;cursor:-webkit-zoom-out;cursor:zoom-out}
 .head-t{margin:4px 0 16px;padding:0}
-#posts-list{padding-left:30px;margin-left:125px;border-left:8px solid #4183c4}
+#posts-list{padding-left:30px;margin-left:125px;border-left:4px solid #666}
 .posts-list-item{padding:8px 0}
 .circle,.posts-list-meta{margin-top:-10px;top:50%;position:absolute}
-.circle{left:-44px;width:20px;height:20px;background:#fff;border:6px solid #4183c4;border-radius:50%}
+.circle{left:-40px;width:16px;height:16px;background:#fff;border:5px solid #898989;border-radius:50%}
+.circle-t{left:-13px;width:22px;height:22px;border:7px solid #4183c4}
 .posts-list-meta{left:-145px;font-size:.95em;line-height:20px}
-.posts-list-name{font-size:20px;text-decoration:none;opacity:.8}
+.posts-list-name{font-size:20px;text-decoration:none;opacity:.8;color:#333}
 .posts-list-name:hover{text-decoration:none;opacity:1}
-.posts-content:hover .circle{background:#4183c4}
+.posts-content:hover .circle{background:#898989}
 .bubble-float-left{display:inline-block;-webkit-transform:translateZ(0);transform:translateZ(0);box-shadow:0 0 1px rgba(0,0,0,0);-webkit-backface-visibility:hidden;backface-visibility:hidden;-moz-osx-font-smoothing:grayscale;position:relative;-webkit-transition-duration:.3s;transition-duration:.3s;-webkit-transition-property:transform;transition-property:transform}
 .bubble-float-left:before{position:absolute;z-index:-1;content:'';top:calc(50% - 10px);left:0;border-style:solid;border-width:10px 10px 10px 0;border-color:transparent #fff transparent transparent;-webkit-transition-duration:.3s;transition-duration:.3s;-webkit-transition-property:transform;transition-property:transform}
-.bubble-float-left:active,.bubble-float-left:focus,.bubble-float-left:hover{border-color:transparent #4183c4 transparent transparent;-webkit-transform:translateX(10px);transform:translateX(10px)}
-.bubble-float-left:active:before,.bubble-float-left:focus:before,.bubble-float-left:hover:before{border-color:transparent #4183c4 transparent transparent;-webkit-transform:translateX(-20px);transform:translateX(-20px)}
+.bubble-float-left:active,.bubble-float-left:focus,.bubble-float-left:hover{border-color:transparent #666 transparent transparent;-webkit-transform:translateX(10px);transform:translateX(10px)}
+.bubble-float-left:active:before,.bubble-float-left:focus:before,.bubble-float-left:hover:before{border-color:transparent #666 transparent transparent;-webkit-transform:translateX(-20px);transform:translateX(-20px)}
 .rectangle-list,.rounded-list{counter-reset:li;list-style:none;font:15px 'trebuchet MS','lucida sans';padding:0;text-shadow:0 1px 0 rgba(255,255,255,.5)}
 .rectangle-list li,.rounded-list li{display:inline-block;margin:0 10px}
 .rectangle-list a,.rounded-list a{display:block;color:#444;text-decoration:none}
@@ -1746,3 +1747,9 @@ to{transform:translateY(0) scale(1);opacity:1}
 #tagscloud a{position:absolute;top:0;left:0;color:#fff;background-color:#2a485d;text-decoration:none;margin:0 10px 15px 0;line-height:18px;padding:1px 5px;display:inline-block;border-radius:3px}
 #tagscloud a:hover{color:#fff;background:#09f}
 .mt12{margin-top:12px}
+.title-border{
+    margin: 0 0 0 125px;
+    padding: 18px 0 18px 26px;
+    border-left: 4px solid #666;
+    color:#4183c4;
+}
