--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -9,7 +9,7 @@
     {% endif %}
       <div id="search-container" class="pull-right">
           <input type="text" id="search-input" placeholder=" 翻页太辛苦，试试直接搜索">
-          <label class="searchIcon" for="search-input"></label>
+          <label class="searchIcon glyphicon glyphicon-search" for="search-input"></label>
           <ul id="results-container"></ul>
       </div>
   </div>
