--- a/_layouts/copy.html
+++ b/_layouts/copy.html
@@ -14,9 +14,19 @@ layout: default
                     <header class="post-header">
                         <h1 class="post-title">{{ page.title }}</h1>
                     </header>
+                    <script src="/styles/js/clipboard.min.js"></script>
                     <article class="post-content">
                         {{ content }}
                     </article>
+                    <script>
+                        var clipboard = new Clipboard('.share-clipboard');
+                        clipboard.on('success', function(e) {
+                            alert('๑乛◡乛๑ 该效果地址已复制到剪切板！(＾Ｕ＾)ノ~ＹＯ')
+                        });
+                        clipboard.on('error', function(e) {
+                            alert('Sorry，复制链接失败！'+ e)
+                        });
+                    </script>
                 </div>
             </div>
         </div>
