--- a/_layouts/copy.html
+++ b/_layouts/copy.html
@@ -21,7 +21,7 @@ layout: default
                     <script>
                         var clipboard = new Clipboard('.share-clipboard');
                         clipboard.on('success', function(e) {
-                            alert('๑乛◡乛๑ 该效果地址已复制到剪切板！(＾Ｕ＾)ノ~ＹＯ')
+                            alert('(＾Ｕ＾)ノ~ＹＯ 该效果地址已复制到剪切板！๑乛◡乛๑')
                         });
                         clipboard.on('error', function(e) {
                             alert('Sorry，复制链接失败！'+ e)
