--- a/_layouts/copy.html
+++ b/_layouts/copy.html
@@ -24,7 +24,7 @@ layout: default
                             alert('(＾Ｕ＾)ノ~ＹＯ 该效果地址已复制到剪切板！๑乛◡乛๑')
                         });
                         clipboard.on('error', function(e) {
-                            alert('Sorry，复制链接失败！'+ e)
+                            alert('Sorry，复制链接失败！您还可以手动操作分享 ( ˃᷄˶˶̫˶˂᷅ )')
                         });
                     </script>
                 </div>
