--- a/_layouts/copy.html
+++ b/_layouts/copy.html
@@ -12,7 +12,7 @@ layout: default
             <div class="panel docs-content">
                 <div class="wrapper">
                     <header class="post-header">
-                        <h1 class="post-title">{{ page.title }}</h1>
+                        <h1 class="post-title">{{ page.title }}</h1><hr/>
                     </header>
                     <script src="/styles/js/clipboard.min.js"></script>
                     <article class="post-content">
