--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,9 @@ layout: default
             </article>
           <hr>
           <blockquote><p>对于本文内容有问题或建议的小伙伴，欢迎在文章底部留言交流讨论。</p></blockquote>
+          <div class="text-center">
+            <a href="{{ '/donate/' | prepend: site.baseurl }}" target="_blank" style="text-decoration: none"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span> 您的支持是将是我写作最大的动力!</button></a>
+          </div>
         </div>
       </div>
       <div class="panel docs-content">
