--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,10 +30,11 @@ layout: default
           </div>
         </div>
       </div>
+      <!--评论功能-->
       <div class="panel docs-content">
         <article class="post-content">
           <div class="wrapper">
-            {% include LessOrMore/comments %} 
+            {% include LessOrMore/comments %}
           </div>
         </article>
       </div>
